--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+     <head> 
+         <meta charset="utf-8" />
+     <title>css<title>
+     <style>
+         p{
+             color:red
+             font-size:50px
+          }
+       
+     <style>
+     <head>
+  
 <body>
 <h1 font10>小店</h1>
   
