--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 <html>
      <head> 
          <meta charset="utf-8" />
-     <title>css<title>
+     <title>css</title>
      <style>
          p{
              color:red
              font-size:50px
           }
        
-     <style>
-     <head>
+     </style>
+     </head>
   
-<body>
-<h1 font10>小店</h1>
-  
-  
-<p>商品</p>
-</body>
+    <body>
+        <h1>小店</h1>
+        <p>商品</p>
+    </body>
 </html>
