--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
      <head> 
          <meta charset="utf-8" />
      <title>css</title>
-     <style>
+     <style type="text/css">
          p{
-             color:red
-             font-size:50px
+             color:red;
+             font-size:50px;
           }
        
      </style>
