--- a/index.html
+++ b/index.html
@@ -18,3 +18,105 @@
         <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
     </body>
 </html>
+
+<!-- wp:cover {"url":"https://mordendemo.files.wordpress.com/2019/08/background-calm-clouds-747964-2.jpg","id":259,"dimRatio":40,"overlayColor":"foreground-dark","focalPoint":{"x":0.5,"y":0.43},"minHeight":188,"minHeightUnit":"px","isDark":false,"align":"full"} -->
+<div class="wp-block-cover alignfull is-light" style="min-height:188px"><span aria-hidden="true" class="wp-block-cover__background has-foreground-dark-background-color has-background-dim-40 has-background-dim"></span><img class="wp-block-cover__image-background wp-image-259" alt="" src="https://mordendemo.files.wordpress.com/2019/08/background-calm-clouds-747964-2.jpg" style="object-position:50% 43%" data-object-fit="cover" data-object-position="50% 43%"/><div class="wp-block-cover__inner-container"><!-- wp:paragraph -->
+<p></p>
+<!-- /wp:paragraph --></div></div>
+<!-- /wp:cover -->
+
+<!-- wp:columns {"align":"wide"} -->
+<div class="wp-block-columns alignwide"><!-- wp:column -->
+<div class="wp-block-column"><!-- wp:heading {"level":5} -->
+<h5 class="wp-block-heading">卓越理念</h5>
+<!-- /wp:heading -->
+
+<!-- wp:image {"id":261,"sizeSlug":"large"} -->
+<figure class="wp-block-image size-large"><img src="https://mordendemo.files.wordpress.com/2019/08/drangarnir-faroe-islands-fog-2582027-1.jpg?w=750" alt="" class="wp-image-261"/></figure>
+<!-- /wp:image -->
+
+<!-- wp:paragraph -->
+<p>这是分栏的一组区块。可以调整分栏布局以适应不同的需求。</p>
+<!-- /wp:paragraph --></div>
+<!-- /wp:column -->
+
+<!-- wp:column -->
+<div class="wp-block-column"><!-- wp:heading {"level":5} -->
+<h5 class="wp-block-heading">专业精神</h5>
+<!-- /wp:heading -->
+
+<!-- wp:image {"id":262,"sizeSlug":"large"} -->
+<figure class="wp-block-image size-large"><img src="https://mordendemo.files.wordpress.com/2019/08/adventure-bay-beach-861034-1.jpg?w=750" alt="" class="wp-image-262"/></figure>
+<!-- /wp:image -->
+
+<!-- wp:paragraph -->
+<p>这是分栏的一组区块。可以调整分栏布局以适应不同的需求。</p>
+<!-- /wp:paragraph --></div>
+<!-- /wp:column -->
+
+<!-- wp:column -->
+<div class="wp-block-column"><!-- wp:heading {"level":5} -->
+<h5 class="wp-block-heading">专门技术</h5>
+<!-- /wp:heading -->
+
+<!-- wp:image {"id":263,"sizeSlug":"large"} -->
+<figure class="wp-block-image size-large"><img src="https://mordendemo.files.wordpress.com/2019/08/bay-beach-cliff-460890-1.jpg?w=750" alt="" class="wp-image-263"/></figure>
+<!-- /wp:image -->
+
+<!-- wp:paragraph -->
+<p>这是分栏的一组区块。可以调整分栏布局以适应不同的需求。</p>
+<!-- /wp:paragraph --></div>
+<!-- /wp:column --></div>
+<!-- /wp:columns -->
+
+<!-- wp:separator {"opacity":"css"} -->
+<hr class="wp-block-separator has-css-opacity"/>
+<!-- /wp:separator -->
+
+<!-- wp:columns {"align":"wide"} -->
+<div class="wp-block-columns alignwide"><!-- wp:column -->
+<div class="wp-block-column"><!-- wp:heading {"level":5} -->
+<h5 class="wp-block-heading">战略</h5>
+<!-- /wp:heading -->
+
+<!-- wp:list -->
+<ul><!-- wp:list-item -->
+<li>这是一个列表区块。</li>
+<!-- /wp:list-item -->
+
+<!-- wp:list-item -->
+<li>列表可以采用项目符号或编号列表形式。</li>
+<!-- /wp:list-item -->
+
+<!-- wp:list-item -->
+<li>增加和减少列表项的缩进量以创建大纲。</li>
+<!-- /wp:list-item --></ul>
+<!-- /wp:list --></div>
+<!-- /wp:column -->
+
+<!-- wp:column -->
+<div class="wp-block-column"><!-- wp:heading {"level":5} -->
+<h5 class="wp-block-heading">成长</h5>
+<!-- /wp:heading -->
+
+<!-- wp:quote -->
+<blockquote class="wp-block-quote"><!-- wp:paragraph -->
+<p>这是带有简短引文的引用区块。</p>
+<!-- /wp:paragraph --><cite>这是引文。</cite></blockquote>
+<!-- /wp:quote -->
+
+<!-- wp:paragraph -->
+<p></p>
+<!-- /wp:paragraph --></div>
+<!-- /wp:column -->
+
+<!-- wp:column -->
+<div class="wp-block-column"><!-- wp:heading {"level":5} -->
+<h5 class="wp-block-heading">成功</h5>
+<!-- /wp:heading -->
+
+<!-- wp:paragraph {"dropCap":true} -->
+<p class="has-drop-cap">这是采用首字下沉效果的段落区块。可使用“设置”面板更改区块设置。</p>
+<!-- /wp:paragraph --></div>
+<!-- /wp:column --></div>
+<!-- /wp:columns -->
