--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </html>
 
 <!-- wp:cover {"url":"https://mordendemo.files.wordpress.com/2019/08/background-calm-clouds-747964-2.jpg","id":259,"dimRatio":40,"overlayColor":"foreground-dark","focalPoint":{"x":0.5,"y":0.43},"minHeight":188,"minHeightUnit":"px","isDark":false,"align":"full"} -->
-<div class="wp-block-cover alignfull is-light" style="min-height:188px"><span aria-hidden="true" class="wp-block-cover__background has-foreground-dark-background-color has-background-dim-40 has-background-dim"></span><img class="wp-block-cover__image-background wp-image-259" alt="" src="https://mordendemo.files.wordpress.com/2019/08/background-calm-clouds-747964-2.jpg" style="object-position:50% 43%" data-object-fit="cover" data-object-position="50% 43%"/><div class="wp-block-cover__inner-container"><!-- wp:paragraph -->
+<!-- <div class="wp-block-cover alignfull is-light" style="min-height:188px"><span aria-hidden="true" class="wp-block-cover__background has-foreground-dark-background-color has-background-dim-40 has-background-dim"></span><img class="wp-block-cover__image-background wp-image-259" alt="" src="https://mordendemo.files.wordpress.com/2019/08/background-calm-clouds-747964-2.jpg" style="object-position:50% 43%" data-object-fit="cover" data-object-position="50% 43%"/><div class="wp-block-cover__inner-container"> --> <!-- wp:paragraph -->
 <p></p>
 <!-- /wp:paragraph --></div></div>
 <!-- /wp:cover -->
